bundled_metadata/force-app/main/default/objects/Program_Market_Mapping__mdt/Program_Market_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Program Market Mapping</label>
    <pluralLabel>Program Market Mapping</pluralLabel>
</CustomObject>