bundled_metadata/force-app/main/default/objects/Program_Market_Mapping__mdt/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <label>Market Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>