bundled_metadata/force-app/main/default/objects/Program_Market_Mapping__mdt/fields/User_Provisioning_Configuration__c.field-meta.xml
<CustomField>
    <fullName>User_Provisioning_Configuration__c</fullName>
    <label>User Provisioning Configuration</label>
    <referenceTo>User_Provisioning_Configuration__mdt</referenceTo>
    <relationshipLabel>Program Market Mapping</relationshipLabel>
    <relationshipName>Program_Market_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>